fix(ux): corrects the misalignment in look and feel, adds build id in the modal title, removes restore and dismiss buttons temporarily

--- a/src/app/stack/recommender/recommender.component.scss
+++ b/src/app/stack/recommender/recommender.component.scss
@@ -40,6 +40,9 @@
         padding-bottom: 0;
         padding-top: 0;
     }
+    .list-view-pf-checkbox {
+        margin-left: 15px;
+    }
     button {
         outline: none;
         &.dropdown-toggle {
